Update versions and fix JUnit tests and NumberFormat whitespace char